<resources>
    <string name="app_name">GithubUser</string>
    <string name="logo_github">logo github</string>
    <string name="github_user">GitHub Users</string>
    <string name="loading">Loading …</string>
    <string name="you_can_search_github_user">You can search github user</string>
    <string name="search_hint">Insert data</string>
    <string name="insert_username">Insert Username</string>
    <string name="search">Search</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="_100">100</string>
    <string name="repository">Repository</string>
    <string name="fab">fab</string>
    <string name="settings">Change Language Settings</string>
    <string name="favorite_user">Favorite User</string>
    <string name="key_reminder">Reminder</string>
    <string name="key_language">Language</string>
    <string name="reminder">Reminder</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="item_settings">Settings</string>
    <string name="language">Language</string>
    <string name="appwidget_text_ex">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text_empty">Empty Text</string>
    <string name="appwidget_text">STAR WARS BANNER</string>
    <string name="empty_text">NO DATA</string>
    <string name="stack_widget_item_picture">Stack Widget Item Picture</string>
    <string name="widget_avatar">Avatar</string>
    <string name="emptytext">Empty Text</string>
    <string name="string_logo_github" />
</resources>