<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/appWidgetBackgroundColor"
    android:theme="@style/ThemeOverlay.GithubUser.AppWidgetContainer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/logo"
                            android:contentDescription="@string/string_logo_github" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="2dp"
                                    android:text="@string/github_user"
                                    android:textSize="20sp"
                                    android:textStyle="bold"
                                    android:textAllCaps="false"
                                    android:textColor="@color/white"
                                    />
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="2dp"
                                    android:text="@string/favorite_user"
                                    android:textSize="16sp"
                                    android:textStyle="normal"
                                    android:textColor="@color/white"
                                    />
                        </LinearLayout>

                </LinearLayout>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:loopViews="true" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/emptytext"
            android:visibility="gone"/>
        </LinearLayout>

</FrameLayout>